--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
       <nav>
         <ul class="main-navigation">
           <li class="item">
-            <a href="./index.html" class="link"><span class="studio">Студія</span></a>
+            <a href="./index.html" class="link">Студія</a>
           </li>
-          <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li class="item"><a href="./portfolio.html" class="link"><span class="studio">Портфоліо</span></a></li>
           <li class="item">
             <a href="./" class="link">Контакти</a>
           </li>
