--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,12 @@
         </ul>
         <ul class="ul-portfolio">
           <li class="item-portfolio"><a class='portfolio-link' href="" target="_blank">
-              <img src="./images/notebook.jpg" alt="notebook" width="370" height="294" >
-
+              <div class="overlay">
+                <img src="./images/notebook.jpg" alt="notebook" width="370" height="294" >
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3>Технокряк</h3>
                 <p>Веб-сайт</p>
@@ -77,12 +81,17 @@
           </li>
           <li class="item-portfolio">
             <a class='portfolio-link' href="" target="_blank">
-              <img
+              <div class="overlay">
+                <img
                   src="./images/basketball.jpg"
                   alt="poster_basketball"
                   width="370"
                   height="294"
                 >
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                 <p>Дизайн</p>
@@ -91,8 +100,12 @@
           </li>
           <li class="item-portfolio">
             <a class='portfolio-link' href="" target="_blank">
-              <img src="./images/fish.jpg" alt="fish" width="370" height="294" >
-
+              <div class="overlay">
+                <img src="./images/fish.jpg" alt="fish" width="370" height="294" >
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3>Ресторан <span lang="en">SeaFood</span></h3>
                 <p>Додаток</p>
@@ -101,8 +114,12 @@
           </li>
           <li class="item-portfolio">
             <a class='portfolio-link' href="" target="_blank">
-              <img src="./images/headphones.jpg" alt="headphones" width="370" height="294" >
-
+              <div class="overlay">
+                <img src="./images/headphones.jpg" alt="headphones" width="370" height="294" >
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3>Проєкт <span lang="en">Prime</span></h3>
                 <p>Маркетинг</p>
@@ -111,8 +128,12 @@
           </li>
           <li class="item-portfolio">
             <a class='portfolio-link' href="" target="_blank">
-              <img src="./images/box.jpg" alt="box" width="370" height="294" >
-
+              <div class="overlay">
+                <img src="./images/box.jpg" alt="box" width="370" height="294" >
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3>Проєкт <span lang="en">Boxes</span></h3>
                 <p>Додаток</p>
@@ -121,8 +142,12 @@
           </li>
           <li class="item-portfolio">
             <a class='portfolio-link' href="" target="_blank">
-              <img src="./images/mac.jpg" alt="macbook" width="370" height="294" >
-
+              <div class="overlay">
+                <img src="./images/mac.jpg" alt="macbook" width="370" height="294" >
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3><span lang="en">Inspiration has no Borders</span></h3>
                 <p>Веб-сайт</p>
@@ -131,8 +156,12 @@
           </li>
           <li class="item-portfolio">
             <a class='portfolio-link' href="" target="_blank">
-              <img src="./images/book.jpg" alt="book" width="370" height="294" >
-
+              <div class="overlay">
+                <img src="./images/book.jpg" alt="book" width="370" height="294" >
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3>Видання <span lang="en">Limited Edition</span></h3>
                 <p>Дизайн</p>
@@ -141,8 +170,12 @@
           </li>
           <li class="item-portfolio">
             <a class='portfolio-link' href="" target="_blank">
-              <img src="./images/tablet.jpg" alt="card" width="370" height="294">
-
+              <div class="overlay">
+                <img src="./images/tablet.jpg" alt="card" width="370" height="294">
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3>Проєкт <span lang="en">LAB</span></h3>
                 <p>Маркетинг</p>
@@ -151,12 +184,17 @@
           </li>
           <li class="item-portfolio">
             <a class='portfolio-link' href="" target="_blank">
-              <img
+              <div class="overlay">
+                <img
                   src="./images/notebook_hand.jpg"
                   alt="notebook_hand"
                   width="370"
                   height="294"
               >
+                <p class="overlay-txt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                  приватну особу.</p>
+              </div>
               <div class="text-portfolio">
                 <h3><span lang="en">Growing Business</span></h3>
                 <p>Додаток</p>
