--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="modal">
             <button class="close" type="button" data-modal-close>
               <svg class="icon-close" width="11" height="11">
-                <use href="./images/icons.svg#icon-close-black"></use>
+                <use href="./images/icons.svg#icon-Vector-1"></use>
               </svg>
             </button>
           </div>
